keycloak/dep1_init_volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-volumes
  namespace: keycloak
spec:
  volumes:
    - name: vol-themes-data
      persistentVolumeClaim:
        claimName: themes-data
  restartPolicy: Never
  containers:
  - name: init-volumes
    image: "quay.io/keycloak/keycloak:13.0.1"
#   imagePullPolicy: Always
#   args: ["tail", "-f", "/dev/null"]
    securityContext:
      runAsUser: 0
#   command: ['sh', '-c', 'chown 1111:1111 /data && chown 1111:1111 /opt']
    command: 
    - 'sh'
    - '-c'
    - >-
      chown jboss /tmp/themes
      && chmod 771 /tmp/themes
      && cp -rp /opt/jboss/keycloak/themes/* /tmp/themes/
    volumeMounts:
      - mountPath: "/tmp/themes"
        name: vol-themes-data
