keycloak/dep3_keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: vol-themes-data
          persistentVolumeClaim:
            claimName: themes-data
      containers:
      - name: keycloak
#       image: quay.io/keycloak/keycloak:12.0.4
        image: quay.io/keycloak/keycloak:13.0.1
        volumeMounts:
          - mountPath: "/opt/jboss/keycloak/themes"
            name: vol-themes-data
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
