keycloak/dep3_keycloak_v4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      priorityClassName: core-services
      nodeSelector: 
        chaimeleon.eu/target: core-services
      volumes:
        - name: vol-themes-data
          persistentVolumeClaim:
            claimName: themes-data
        - name: vol-standalone-deployments
          persistentVolumeClaim:
            claimName: standalone-deployments
      containers:
      - name: keycloak
        image: "quay.io/keycloak/keycloak:26.2.5"
        args: ["start", "--http-relative-path=/auth", "--features=token-exchange", "--http-enabled=true", "--proxy-headers=xforwarded"]
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1500m"
#         limits:
#           memory: "1000Mi"
#           cpu: "1500m"
        volumeMounts:
          - name: vol-themes-data
            mountPath: "/opt/keycloak/themes/eucaim-node/"
            subPath: "eucaim-node"
          - name: vol-standalone-deployments
            mountPath: "/opt/keycloak/providers/keycloak-event-listener-email-to-admin-1.0.6.jar"
            subPath: "keycloak-event-listener-email-to-admin-1.0.6.jar"
            readOnly: false
          - name: vol-standalone-deployments
            mountPath: "/opt/keycloak/providers/keycloak-required-action-user-validated-1.0.5.jar"
            subPath: "keycloak-required-action-user-validated-1.0.5.jar"
            readOnly: false
        ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/realms/master
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
